syntax = "proto3";
package greeting;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetEveryOneRequest {
  string name = 1;
}

message GreetEveryOneResponse {
  string result = 1;
}

service GreetService {
  // unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Stream Server
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

  // Stream Client
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};

  // Bidirectional stream
  rpc GreetEveryOne(stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse);
}